--- a/treinamento javascript 01/styles.css
+++ b/treinamento javascript 01/styles.css
@@ -8,6 +8,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html{
+    font-size: 93.75%;
+}
 body{
     background-color: #f0f2f5;
     font-family: 'Poppins', sans-serif;
@@ -20,6 +24,8 @@ body{
     margin: -1px;
     overflow: hidden;
     clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
 }
 .container {
     width: min(90vw, 800px); 
@@ -66,6 +72,9 @@ header{
     color: var(--dark-blue);
 }
 .balance__card h3{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     font-weight: 400;
     font-size: 1rem;
 }
@@ -81,16 +90,33 @@ header{
 }
 
 /* =========== TRANSACTION =========== */
+#transaction{
+    width: 100%;
+    display: block;
+    overflow-x: auto;
+}
+#transaction__new-transaction{
+    text-decoration: none;
+    color: #49aa26;
+    display: inline-block;
+    margin-bottom: 0.8rem;
+    
+}
+
+#transaction__new-transaction:hover{
+    color: #3dd705;
+}
 
 #transaction__data-table{
     width: 100%;
     border-spacing: 0 0.5rem;
     color: #969cb3;
+
 }
 
-table thead tr th:first-child,
-table tbody tr td:first-child{
-    border-radius: 0.25rem 0 0 0.25rem;
+table thead tr th,
+table tbody tr td{
+    border-radius: 0.25rem;
 }
 
 
@@ -124,10 +150,49 @@ td.transaction__income{
 td.transaction__expense{
     color: #e92929;
 }
+/* =========== MODAL =========== */
+.modal-overlay{
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+}
+.modal-overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
+.modal{
+    background-color: #f0f2f5;
+    padding: 2.4rem;
+
+}
+
 /* =========== FOOTER =========== */
 
 footer {
     text-align: center;
     padding: 4rem 0 2rem;
     color: var(--dark-blue);
+}
+
+/* =========== RESPONSIVIDADE =========== */
+@media screen and (min-width: 800px){
+    html{
+        font-size: 87.5%;
+    }
+
+    #balance {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 2rem;
+    }
+    
 }
