--- a/treinamento javascript 01/styles.css
+++ b/treinamento javascript 01/styles.css
@@ -1,198 +1,284 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap");
 :root {
-    --dark-blue:#363f5f;
+  --dark-blue: #363f5f;
+  --green: #49aa26;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html{
-    font-size: 93.75%;
+html {
+  font-size: 93.75%;
 }
-body{
-    background-color: #f0f2f5;
-    font-family: 'Poppins', sans-serif;
+body {
+  background-color: #f0f2f5;
+  font-family: "Poppins", sans-serif;
 }
 
-.sr-only{
-    position: absolute;
-    width: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0,0,0,0);
-    white-space: nowrap;
-    border-width: 0;
+.sr-only {
+  position: absolute;
+  width: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 .container {
-    width: min(90vw, 800px); 
-    margin: auto;
+  width: min(90vw, 800px);
+  margin: auto;
 }
 
-h2{
-    margin-top: 3.2rem;
-    margin-bottom: 0.8rem;
-    color: var(--dark-blue);
+h2 {
+  margin-top: 3.2rem;
+  margin-bottom: 0.8rem;
+  color: var(--dark-blue);
 
-    font-weight: 400;
+  font-weight: 400;
+}
+
+/* =========== BUTTONS =========== */
+button{
+    width: 100%;
+    height: 50px;
+
+    border: none;
+    color: white;
+    background-color: var(--green);
+    padding:0;
+    border-radius: 0.15rem;
+    cursor: pointer;
+
+    transition: background-color 200ms;
+}
+
+button:hover{
+    background-color: #3dd705;
+    transition: background-color 200ms;
 }
 
 /* =========== HEADER =========== */
-header{
-    background-color: #2d4a22;
-    padding: 2rem 0 10rem;
-    text-align: center;
+header {
+  background-color: #2d4a22;
+  padding: 2rem 0 10rem;
+  text-align: center;
 }
 
 #logo {
-    color: #fff;
-    font-weight: 100;
+  color: #fff;
+  font-weight: 100;
 }
 
 /* =========== BALANCE =========== */
 
-#balance{
-    margin-top: -8rem;
+#balance {
+  margin-top: -8rem;
 }
 
 #balance h2 {
-    color: #fff;
-    margin-top: 0;
+  color: #fff;
+  margin-top: 0;
 }
 /* =========== BALANCE__CARD =========== */
 
-.balance__card{
-    background-color: #fff;
-    padding: 1.5rem 2rem;
-    border-radius: 0.25rem;
-    margin-bottom: 2rem;
-    color: var(--dark-blue);
+.balance__card {
+  background-color: #fff;
+  padding: 1.5rem 2rem;
+  border-radius: 0.25rem;
+  margin-bottom: 2rem;
+  color: var(--dark-blue);
 }
-.balance__card h3{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: 400;
-    font-size: 1rem;
+.balance__card h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
-.balance__card p{
-    font-size: 2rem;
-    line-height: 3rem;
-    margin-top: 1rem;
+.balance__card p {
+  font-size: 2rem;
+  line-height: 3rem;
+  margin-top: 1rem;
 }
-.balance__card.total{
-    background-color: #49aa26;
-    color: #fff;
+.balance__card.total {
+  background-color: var(--green);
+  color: #fff;
 }
 
 /* =========== TRANSACTION =========== */
-#transaction{
-    width: 100%;
-    display: block;
-    overflow-x: auto;
+#transaction {
+  width: 100%;
+  display: block;
+  overflow-x: auto;
 }
-#transaction__new-transaction{
-    text-decoration: none;
-    color: #49aa26;
-    display: inline-block;
-    margin-bottom: 0.8rem;
-    
-}
-
-#transaction__new-transaction:hover{
-    color: #3dd705;
+#transaction__new-transaction {
+  text-decoration: none;
+  color: var(--green);
+  display: inline-block;
+  margin-bottom: 0.8rem;
 }
 
-#transaction__data-table{
-    width: 100%;
-    border-spacing: 0 0.5rem;
-    color: #969cb3;
+#transaction__new-transaction:hover {
+  color: #3dd705;
+}
 
+#transaction__data-table {
+  width: 100%;
+  border-spacing: 0 0.5rem;
+  color: #969cb3;
 }
 
 table thead tr th,
-table tbody tr td{
-    border-radius: 0.25rem;
+table tbody tr td {
+  border-radius: 0.25rem;
 }
-
 
 table th {
-   background-color: #fff;
-   font-weight: 400;
-   padding: 1rem 2rem;
-   text-align: left;
+  background-color: #fff;
+  font-weight: 400;
+  padding: 1rem 2rem;
+  text-align: left;
 }
 
-table tbody tr{
-    opacity: 0.7;
+table tbody tr {
+  opacity: 0.7;
 }
 
-table tbody tr:hover{
-    opacity: 1;
-    cursor: pointer;
-} 
+table tbody tr:hover {
+  opacity: 1;
+  cursor: pointer;
+}
 
 table td {
-    background-color: #fff;
-    padding: 1rem 2rem;
+  background-color: #fff;
+  padding: 1rem 2rem;
 }
-td.transaction__description{
-    color: var(--dark-blue);
+td.transaction__description {
+  color: var(--dark-blue);
 }
 
-td.transaction__income{
-    color: #12a454;
+td.transaction__income {
+  color: #12a454;
 }
-td.transaction__expense{
-    color: #e92929;
+td.transaction__expense {
+  color: #e92929;
 }
 /* =========== MODAL =========== */
-.modal-overlay{
-    width: 100%;
-    height: 100%;
+.modal-overlay {
+  width: 100%;
+  height: 100%;
 
-    background-color: rgba(0,0,0,0.7);
-    position: fixed;
-    top: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  visibility: hidden;
+}
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+.modal {
+  background-color: #f0f2f5;
+  padding: 2.4rem;
+  width: 90%;
+  max-width: 500px;
+}
+/* =========== MODAL -> FORM =========== */
+#modal__form {
+  max-width: 500px;
+}
+#modal__form h2 {
+  margin-top: 0;
+}
+
+#modal__form input {
+  border: none;
+  border-radius: 0.2rem;
+
+  padding: 0.8rem;
+  width: 100%;
+}
+
+.modal__form__input-group {
+  margin-top: 0.8rem;
+}
+.modal__form__input-group small {
+  opacity: 0.4;
+  margin-top: 0.5rem;
+  display: inline-block;
+}
+
+.modal__form__input-group.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.modal__form__input-group.actions .button,
+.modal__form__input-group.actions button {
+    width: 48%;
+}
+
+.modal__form__input-group__button.cancel{
+    color: #e92929;
+    text-decoration: none;
+    border: 2px #e92929 solid;
+    border-radius: 0.25rem;
+    padding: 0 4rem;
+    height: 50px;
     display: flex;
-    align-items: center;
     justify-content: center;
-
-    opacity: 0;
-    visibility: hidden;
+    align-items: center;
+    transition: 200ms;
 }
-.modal-overlay.active{
-    opacity: 1;
-    visibility: visible;
-}
-.modal{
-    background-color: #f0f2f5;
-    padding: 2.4rem;
-
+.modal__form__input-group__button.cancel:hover {
+    background-color: #e92929;
+    color: #fff;
+    transition: 200ms;
 }
 
 /* =========== FOOTER =========== */
 
 footer {
-    text-align: center;
-    padding: 4rem 0 2rem;
-    color: var(--dark-blue);
+  text-align: center;
+  padding: 4rem 0 2rem;
+  color: var(--dark-blue);
 }
 
 /* =========== RESPONSIVIDADE =========== */
-@media screen and (min-width: 800px){
-    html{
-        font-size: 87.5%;
-    }
+@media screen and (min-width: 800px) {
+  html {
+    font-size: 87.5%;
+  }
 
-    #balance {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 2rem;
-    }
-    
+  #balance {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2rem;
+  }
+  .modal__form__input-group__button.cancel{
+    padding: 0 5rem;
+  }
+}
+
+
+
+@media screen and (max-width: 508px) {
+    .modal__form__input-group__button.cancel{
+        padding: 0 2rem;
+      }
+}
+@media screen and (max-width: 360px) {
+    .modal__form__input-group__button.cancel{
+        padding: 0 1.5rem;
+      }
 }
