--- a/treinamento javascript 01/styles.css
+++ b/treinamento javascript 01/styles.css
@@ -125,6 +125,7 @@ header {
 
 #transaction__new-transaction:hover {
   color: #3dd705;
+  cursor: pointer;
 }
 
 #transaction__data-table {
@@ -133,9 +134,14 @@ header {
   color: #969cb3;
 }
 
-table thead tr th,
-table tbody tr td {
-  border-radius: 0.25rem;
+table thead tr th:last-child,
+table tbody tr td:last-child {
+  border-radius: 0 0.25rem 0.25rem 0;
+}
+
+table thead tr th:first-child,
+table tbody tr td:first-child {
+  border-radius:  0.25rem 0 0 0.25rem ;
 }
 
 table th {
